--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
+# Maven / Gradle
+target
 
-# Log file
+# Eclipse / Visual Studio Code(Language Support for Java)
+.classpath
+.project
+.settings
+
+# IntelliJ IDEA
+.idea
+*.iml
+
+# Misc
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
